<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="85dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_edtEmail"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/login_edtPassword"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edtEmail"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/button_primary"
        android:radius="5dp"
        android:text="@string/login"
        android:textColor="#F8F8F8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edtPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_textRegister"
        android:layout_width="372dp"
        android:layout_height="46dp"
        android:layout_marginBottom="28dp"
        android:text="Do not have an account? Register now!"
        android:textColor="#858383"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/login_edtPassword"
        app:layout_constraintVertical_bias="0.746" />

    <CheckBox
        android:id="@+id/login_rememberAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_account"
        android:textColor="#858383"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_textRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/login_edtPassword"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/login_forgotPassword"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="Forgot password"
        android:textColor="#858383"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/login_rememberAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>